fix Refaster issues.